<resources>
    <string name="app_name">CrowderApp</string>
    <string name="save">Save</string>
    <string name="profile_username">Username</string>
    <string name="profile_contact_info">Contact Info</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone Number</string>
    <string name="blank">" "</string>
    <string name="all_experiments">All Experiments</string>
    <string name="my_experiments">My Experiments</string>
    <string name="profile">Profile</string>
    <string name="add_experiment">Add Experiment</string>
    <string name="trial_type">Trial Type</string>
    <string name="experiment_name">Name of Experiment</string>
    <string name="experiment_name2">Experiment Name</string>
    <string name="search_username">Username:</string>
    <string name="search_status">Status:</string>
    <string name="search_type">"Type: "</string>
    <string name="update_index_tag">update_index_tag</string>
    <string name="quarter_1">Quartile 1</string>
    <string name="quarter_3">Quartile 3</string>
    <string name="_0">0</string>
    <string name="quarter_2">Quartile 2</string>
    <string name="median">Median</string>
    <string name="mean">Mean</string>
    <string name="std_dev">Std. Dev.</string>
    <string name="qr_code">QR Code</string>
    <string name="number_of_counts">Number of Counts:</string>
    <string name="deletableExpSuffix">__UI.TEST__</string>
    <string name="minimum_number_of_trials">Minimum Number of Trials</string>
    <string name="location_required">Location Required?</string>
    <string name="region">Region</string>
    <string name="set_region_of_experiment">Set region of experiment</string>
    <string name="set_minimum_number_of_trials_for_experiment">Set minimum number of trials</string>
    <string name="set_the_name_of_the_experiment">Set the name of the Experiment</string>
    <string name="included">Included</string>
    <string name="reply">Reply</string>
    <string name="loading">Loading...</string>
    <string name="add_reply">Add Reply</string>
    <string name="question">Question</string>
    <string name="add_a_question">Add a Question</string>
    <string name="average_per_trial">Average per Trial:</string>
    <string name="integer_value">Integer Value</string>
    <string name="enter">Enter</string>
    <string name="non_neg">Non Neg</string>
    <string name="number_of_measurements">Number of Measurements:</string>
    <string name="average_per_measurement">Average per measurement:</string>
    <string name="measurement_value">Measurement Value</string>
    <string name="measure_trial">Measure Trial</string>
    <string name="total_trials">Total Trials</string>
    <string name="type_question_here">Type Question Here</string>
    <string name="enter_reply_here">Enter Reply Here</string>
    <string name="mintrials">MinTrials</string>
    <string name="subscribe">Subscribe</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="search">Search</string>
</resources>