<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/num_measurement_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="14dp"
        android:text="@string/number_of_measurements"
        app:layout_constraintBottom_toTopOf="@+id/ave_measurement_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ave_measurement_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="77dp"
        android:text="@string/average_per_measurement"
        app:layout_constraintBottom_toTopOf="@+id/measurement_value_editText"
        app:layout_constraintEnd_toStartOf="@+id/ave_measurement_value_textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_measurement_textView" />

    <TextView
        android:id="@+id/ave_measurement_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="68dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/measurement_value_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ave_measurement_textView" />

    <TextView
        android:id="@+id/num_measurements_value_textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="123dp"
        android:layout_marginBottom="30dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/ave_measurement_value_textView"
        app:layout_constraintStart_toEndOf="@+id/num_measurement_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/measurement_value_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/measurement_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ave_measurement_textView"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/measurement_button_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/measurement_button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measurement_value_editText"
        app:layout_constraintVertical_bias="1.0"
        android:gravity="center"/>

    <Button
        android:id="@+id/measurement_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/measurement_button_enter" />

    <TextView
        android:id="@+id/measure_trial_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/measure_trial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>