<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/total_trials" />

        <TextView
            android:id="@+id/total_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/q1_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/quarter_1" />

        <TextView
            android:id="@+id/q1_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/q2_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/quarter_2" />

        <TextView
            android:id="@+id/q2_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/q3_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/quarter_3" />

        <TextView
            android:id="@+id/q3_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/median_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/median"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/median_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mean_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mean"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/mean_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/std_dev_TextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/std_dev" />

        <TextView
            android:id="@+id/std_dev_value_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/_0" />
    </LinearLayout>

</LinearLayout>